# git-server

./: Cargo.toml
example/: .gitignore  Cargo.toml  README.md
example/src/: main.rs  simple_auth.rs  simple_repository.rs  simple_repository_provider.rs
src/: error.rs  lib.rs
src/repository/: mod.rs  repository_provider.rs
src/server/: authenticator.rs  git_process.rs  git_server.rs  git_server_config.rs  mod.rs  request_handler.rs
