[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
log = "0.4.20"
russh = { git = "https://github.com/warp-tech/russh" }
russh-keys = { git = "https://github.com/warp-tech/russh" }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["time"] }
